# test-zep

./: .gitignore  CMakeLists.txt  README.md  analyse-data.py  analyse_audio.py  analyse_monitor.py  libteensy.c  libteensy.h  parse-cmd.c  parse-cmd.h  plot-data.py  run-test.sh  run_tests.py  teensy-samples  teensy-samples.c  test_audio0.zp
analyse-scripts/: analyse-data.py
eda/: Zep-meting-teensy-cache.bak  Zep-meting-teensy-cache.lib  Zep-meting-teensy.bak  Zep-meting-teensy.pro  Zep-meting-teensy.sch  zep.bak  zep.lib
firmware/teensy-zep-sample/: Clock.cpp  Clock.h  CyclicQueue.cpp  CyclicQueue.h  EventQueue-impl.cpp  EventQueue-impl.h  Events.cpp  Events.h  InterruptLock.h  Makefile  TeensyPackage.cpp  TeensyPackage.h  constants.cpp  constants.h  register_inputs.cpp  register_inputs.h  teensy-zep-sample.ino  teensy_constants.h  zepteensy.cpp
results_linux/: audio_output100.txt  audio_output1000.txt  audio_output17.txt  audio_output200.txt  audio_output50.txt  audio_output500.txt  video_output1.txt  video_output12.txt  video_output3.txt  video_output30.txt  video_output6.txt  video_output60.txt
results_windows/: audio_output100.txt  audio_output1000.txt  audio_output17.txt  audio_output200.txt  audio_output50.txt  audio_output500.txt  video_output1.txt  video_output12.txt  video_output3.txt  video_output30.txt  video_output6.txt  video_output60.txt
utils/: electronics.py  teensy-serial.py
zep-scripts/: test_audio0.zp  test_monitor3.zp
zep-scripts/modules/: stats.zm
